bobcat (4.08.00)

  * Added new classes IQuotedPrintableStream and IQuotedPrintableStreambuf.

  * Added new class CSV4180, the class CSV is now deprecated and should no
    longer be used. Use CSV4180 instead.

  * Added new variants of the split members, as well as new members join,
    unescape, urlEncode and urlDecode to the class String.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Fri, 25 Aug 2017 14:15:46 +0200

bobcat (4.07.00)

  * The 'build' script now supports a command 'build select [strip] class ...'
    where 'class ...' is a set of bobcat class names. 'build select' creates a
    reduced bobcat library only containing the classes (and the classes on
    which they recursively depend) specified after 'build select [strip]. See
    also the file INSTALL.

  * The class 'BinopsBase' as defined in version 4.06.01 was rewritten and
    further simplified, following suggestions offered by Wiebe-Marten Wijnja.

  * The file exception/protection.cc no longer uses bobcat/stat, removing
    a circular dependency.

  * Dependencies on A2x and X2a were removed, as their facilities are by now
    provided by std::string.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 12 Feb 2017 13:58:03 +0100

bobcat (4.06.01)

  * The class BinopsBase was simplified. Operator-specifications must now be
    provided to make the requested overloaded operators available. 

  * The class BinopsBase now also accepts operator specifications 'i'
    (implementing the insertion operator) and 'e' (implementing the extraction
    operator.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Tue, 31 Jan 2017 19:53:19 +0100

bobcat (4.06.00)

  * The support classes Mul, Div, Mod, ..., Xor, used by BinopsBase declared a
    Binops parameter, which was nowhere used. This parameter has been removed
    from BinopsBase's support classes.

  * All html man-pages were rebuilt by Yodl 3.08.02 (fixing cosmetic errors).

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 29 Jan 2017 14:43:28 +0100
