@@ -32,6 +32,7 @@ namespace FBB
 #include "fswap1.f"                 // fswap's full implementation
 #include "fswap2.f"                 // the shortcut w/o 1st address
 #include "fswap3.f"                 // the direct memory swap
+#include "fswap6.f"                 // the overload swapping pointers
 
 }   // namespace FBB
 
